# dentalink

./: .gitignore  README.md  pyproject.toml  setup.py
dentalink/: client.py  exceptions.py  query.py
dentalink/schemas/: api.py  citas.py  sucursales.py
tests/: test_query.py
